frontend/test/should_fail/computations_no_assign_func2.gm
node class N
{
	x:array<int>;
}
